--- a/packages/@aws-cdk/aws-servicecatalog/package.json
+++ b/packages/@aws-cdk/aws-servicecatalog/package.json
@@ -80,13 +80,15 @@
   "dependencies": {
     "@aws-cdk/aws-s3-assets": "0.0.0",
     "@aws-cdk/core": "0.0.0",
+    "@aws-cdk/cloud-assembly-schema": "0.0.0",
     "constructs": "^3.0.4"
   },
   "homepage": "https://github.com/aws/aws-cdk",
   "peerDependencies": {
     "@aws-cdk/core": "0.0.0",
     "constructs": "^3.0.4",
-    "@aws-cdk/aws-s3-assets": "0.0.0"
+    "@aws-cdk/aws-s3-assets": "0.0.0",
+    "@aws-cdk/cloud-assembly-schema": "0.0.0"
   },
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
@@ -98,7 +100,8 @@
   },
   "awslint": {
     "exclude": [
-      "props-physical-name:@aws-cdk/aws-servicecatalog.ProductProps"
+      "props-physical-name:@aws-cdk/aws-servicecatalog.ProductProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.CDKProductProps"
     ]
   }
 }
