chore(redshift): update package stability to experimental
L2 constructs were created in May for this module, but the package stability was
never updated.

--- a/packages/@aws-cdk/aws-redshift/package.json
+++ b/packages/@aws-cdk/aws-redshift/package.json
@@ -111,7 +111,7 @@
     ]
   },
   "stability": "experimental",
-  "maturity": "cfn-only",
+  "maturity": "experimental",
   "awscdkio": {
     "announce": false
   }
