--- a/packages/@aws-cdk/aws-ecr-assets/package.json
+++ b/packages/@aws-cdk/aws-ecr-assets/package.json
@@ -65,12 +65,11 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-cdk/assert": "0.0.0",
-    "@types/nodeunit": "^0.0.31",
     "@types/proxyquire": "^1.3.28",
     "aws-cdk": "0.0.0",
     "cdk-build-tools": "0.0.0",
     "cdk-integ-tools": "0.0.0",
-    "nodeunit": "^0.11.3",
+    "nodeunit-shim": "0.0.0",
     "pkglint": "0.0.0",
     "proxyquire": "^2.1.3",
     "@aws-cdk/cloud-assembly-schema": "0.0.0"
@@ -112,6 +111,7 @@
     "announce": false
   },
   "cdk-build": {
+    "jest": true,
     "env": {
       "AWSLINT_BASE_CONSTRUCT": true
     }
