--- a/packages/@aws-cdk/aws-cognito/package.json
+++ b/packages/@aws-cdk/aws-cognito/package.json
@@ -111,12 +111,12 @@
       "props-physical-name:@aws-cdk/aws-cognito.UserPoolIdentityProviderGoogleProps"
     ]
   },
-  "stability": "experimental",
-  "maturity": "developer-preview",
+  "stability": "stable",
+  "maturity": "stable",
   "features": [
     {
       "name": "Higher level constructs for User Pools",
-      "stability": "Developer Preview"
+      "stability": "Stable"
     },
     {
       "name": "Higher level constructs for Identity Pools",
