--- a/.github/workflows/validate-v2-merge-forward.yml
+++ b/.github/workflows/validate-v2-merge-forward.yml
@@ -15,5 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Validate Merge
-        run: ./scripts/v2-validate-merge.sh
-        shell: bash --noprofile --norc -o pipefail {0} # Turn off the default `set -e` flag
+        run: ./scripts/merge-forward.sh
+        env:
+          PR_VALIDATION: 'true'
