--- a/packages/@aws-cdk/aws-msk/package.json
+++ b/packages/@aws-cdk/aws-msk/package.json
@@ -77,7 +77,9 @@
     "@aws-cdk/assert": "0.0.0",
     "cdk-build-tools": "0.0.0",
     "cfn2ts": "0.0.0",
-    "pkglint": "0.0.0"
+    "cdk-integ-tools": "0.0.0",
+    "pkglint": "0.0.0",
+    "jest": "^26.6.0"
   },
   "dependencies": {
     "@aws-cdk/core": "0.0.0",
