--- a/packages/@aws-cdk/aws-cognito/package.json
+++ b/packages/@aws-cdk/aws-cognito/package.json
@@ -73,6 +73,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-cdk/assert": "0.0.0",
+    "@types/punycode": "^2.1.0",
     "cdk-build-tools": "0.0.0",
     "cdk-integ-tools": "0.0.0",
     "cfn2ts": "0.0.0",
@@ -85,7 +86,8 @@
     "@aws-cdk/aws-lambda": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
-    "constructs": "^3.0.4"
+    "constructs": "^3.0.4",
+    "punycode": "^2.1.1"
   },
   "homepage": "https://github.com/aws/aws-cdk",
   "peerDependencies": {
@@ -96,6 +98,9 @@
     "@aws-cdk/custom-resources": "0.0.0",
     "constructs": "^3.0.4"
   },
+  "bundledDependencies": [
+    "punycode"
+  ],
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
   },
