--- a/packages/@aws-cdk/aws-servicecatalog/package.json
+++ b/packages/@aws-cdk/aws-servicecatalog/package.json
@@ -78,7 +78,9 @@
     "pkglint": "0.0.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "0.0.0",
     "@aws-cdk/aws-s3-assets": "0.0.0",
+    "@aws-cdk/aws-sns": "0.0.0",
     "@aws-cdk/cloud-assembly-schema": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/cx-api": "0.0.0",
@@ -86,11 +88,13 @@
   },
   "homepage": "https://github.com/aws/aws-cdk",
   "peerDependencies": {
-    "@aws-cdk/core": "0.0.0",
-    "constructs": "^3.0.4",
+    "@aws-cdk/aws-iam": "0.0.0",
     "@aws-cdk/aws-s3-assets": "0.0.0",
+    "@aws-cdk/aws-sns": "0.0.0",
     "@aws-cdk/cloud-assembly-schema": "0.0.0",
-    "@aws-cdk/cx-api": "0.0.0"
+    "@aws-cdk/core": "0.0.0",
+    "@aws-cdk/cx-api": "0.0.0",
+    "constructs": "^3.0.4"
   },
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
@@ -103,7 +107,12 @@
   "awslint": {
     "exclude": [
       "props-physical-name:@aws-cdk/aws-servicecatalog.ProductProps",
-      "props-physical-name:@aws-cdk/aws-servicecatalog.CDKProductProps"
+      "props-physical-name:@aws-cdk/aws-servicecatalog.CDKProductProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.LaunchNotificationConstraintProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.LaunchRoleConstraintProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.LaunchTemplateConstraintProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.ResourceUpdateConstraintProps",
+      "props-physical-name:@aws-cdk/aws-servicecatalog.StackSetConstraintProps"
     ]
   }
 }
