--- a/packages/@aws-cdk/aws-apigateway/package.json
+++ b/packages/@aws-cdk/aws-apigateway/package.json
@@ -244,6 +244,8 @@
       "docs-public-apis:@aws-cdk/aws-apigateway.JsonSchema.contains",
       "props-default-doc:@aws-cdk/aws-apigateway.JsonSchema.contains",
       "docs-public-apis:@aws-cdk/aws-apigateway.MethodProps",
+      "docs-public-apis:@aws-cdk/aws-apigateway.JsonSchema.default",
+      "props-default-doc:@aws-cdk/aws-apigateway.JsonSchema.default",
       "props-default-doc:@aws-cdk/aws-apigateway.JsonSchema.definitions",
       "docs-public-apis:@aws-cdk/aws-apigateway.JsonSchema.dependencies",
       "props-default-doc:@aws-cdk/aws-apigateway.JsonSchema.dependencies",
