feat(cdk-integ-tools): Publish cdk-integ-tools as separate package
Very helpful for testing construct libraries.

--- a/packages/@aws-cdk-containers/ecs-service-extensions/tsconfig.json
+++ b/packages/@aws-cdk-containers/ecs-service-extensions/tsconfig.json
@@ -95,7 +95,7 @@
       "path": "../../../tools/cdk-build-tools"
     },
     {
-      "path": "../../../tools/cdk-integ-tools"
+      "path": "../../cdk-integ-tools"
     },
     {
       "path": "../../../tools/cfn2ts"
