--- a/packages/cdk-integ-tools/package.json
+++ b/packages/cdk-integ-tools/package.json
@@ -1,13 +1,12 @@
 {
   "name": "cdk-integ-tools",
-  "private": true,
   "version": "0.0.0",
   "description": "Package with integration test scripts for CDK packages",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/aws-cdk.git",
-    "directory": "tools/cdk-integ-tools"
+    "directory": "packages/cdk-integ-tools"
   },
   "bin": {
     "cdk-integ": "bin/cdk-integ",
@@ -19,7 +18,8 @@
     "lint": "cdk-lint",
     "test": "cdk-test",
     "pkglint": "pkglint -f",
-    "build+test+package": "npm run build+test",
+    "package": "cdk-package",
+    "build+test+package": "npm run build+test && npm run package",
     "build+test": "npm run build && npm test"
   },
   "author": {
@@ -47,6 +47,8 @@
     "cdk"
   ],
   "homepage": "https://github.com/aws/aws-cdk",
+  "maturity": "developer-preview",
+  "stability": "experimental",
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
   },
