attempt to remoce indirection

--- a/tools/ubergen/package.json
+++ b/tools/ubergen/package.json
@@ -9,7 +9,7 @@
     "directory": "tools/ubergen"
   },
   "bin": {
-    "ubergen": "bin/ubergen"
+    "ubergen": "bin/ubergen.ts"
   },
   "scripts": {
     "lint": "eslint . --ext .ts --resolve-plugins-relative-to=../cdk-build-tools",
