lint exclusions for DatabaseSecret

--- a/packages/@aws-cdk/aws-docdb/package.json
+++ b/packages/@aws-cdk/aws-docdb/package.json
@@ -101,6 +101,7 @@
   },
   "awslint": {
     "exclude": [
+      "attribute-tag:@aws-cdk/aws-docdb.DatabaseSecret.secretFullArn",
       "attribute-tag:@aws-cdk/aws-docdb.DatabaseSecret.secretName"
     ]
   },
