--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -46,15 +46,16 @@ jobs:
         # We special-case parcel because we are currently on a pre-release and don't want to move to nightlies
         # We special-case aws-sdk because of breaking changes with TS interface exports in recent minor versions - https://github.com/aws/aws-sdk-js/issues/3453
         # We special-case typescript because it's not semantically versionned
+        # We special-case constructs because we want to stay in control of the minimum compatible version
         run: |-
           # Upgrade dependencies at repository root
           ncu --upgrade --filter=@types/node,@types/fs-extra --target=minor
           ncu --upgrade --filter=typescript --target=patch
-          ncu --upgrade --reject=@types/node,@types/fs-extra,parcel,typescript --target=minor
+          ncu --upgrade --reject=@types/node,@types/fs-extra,constructs,parcel,typescript --target=minor
           # Upgrade all the packages
           lerna exec --parallel ncu -- --upgrade --filter=@types/node,@types/fs-extra --target=minor
           lerna exec --parallel ncu -- --upgrade --filter=typescript --target=patch
-          lerna exec --parallel ncu -- --upgrade --reject='@types/node,@types/fs-extra,parcel,typescript,aws-sdk,${{ steps.list-packages.outputs.list }}'  --target=minor
+          lerna exec --parallel ncu -- --upgrade --reject='@types/node,@types/fs-extra,constructs,parcel,typescript,aws-sdk,${{ steps.list-packages.outputs.list }}'  --target=minor
       # This will create a brand new `yarn.lock` file (this is more efficient than `yarn install && yarn upgrade`)
       - name: Run "yarn install --force"
         run: yarn install --force
