Introducing fromSecretPartialArn and fromSecretCompleteArn

--- a/packages/@aws-cdk/aws-secretsmanager/package.json
+++ b/packages/@aws-cdk/aws-secretsmanager/package.json
@@ -106,6 +106,9 @@
       "attribute-tag:@aws-cdk/aws-secretsmanager.Secret.secretFullArn",
       "from-signature:@aws-cdk/aws-secretsmanager.Secret.fromSecretNameV2",
       "from-signature:@aws-cdk/aws-secretsmanager.Secret.fromSecretNameV2.params[2]",
+      "props-default-doc:@aws-cdk/aws-secretsmanager.SecretAttributes.secretArn",
+      "props-default-doc:@aws-cdk/aws-secretsmanager.SecretAttributes.secretCompleteArn",
+      "props-default-doc:@aws-cdk/aws-secretsmanager.SecretAttributes.secretPartialArn",
       "from-signature:@aws-cdk/aws-secretsmanager.SecretTargetAttachment.fromSecretTargetAttachmentSecretArn",
       "from-attributes:fromSecretTargetAttachmentAttributes",
       "props-physical-name:@aws-cdk/aws-secretsmanager.RotationScheduleProps",
