--- a/packages/@aws-cdk/aws-apigatewayv2-integrations/package.json
+++ b/packages/@aws-cdk/aws-apigatewayv2-integrations/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "@aws-cdk/aws-apigatewayv2",
+  "name": "@aws-cdk/aws-apigatewayv2-integrations",
   "version": "0.0.0",
-  "description": "The CDK Construct Library for AWS::APIGatewayv2",
+  "description": "Integrations for AWS APIGateway V2",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "jsii": {
     "outdir": "dist",
     "targets": {
       "dotnet": {
-        "namespace": "Amazon.CDK.AWS.APIGatewayv2",
-        "packageId": "Amazon.CDK.AWS.APIGatewayv2",
+        "namespace": "Amazon.CDK.AWS.APIGatewayv2.Integrations",
+        "packageId": "Amazon.CDK.AWS.APIGatewayv2.Integrations",
         "signAssembly": true,
         "assemblyOriginatorKeyFile": "../../key.snk",
         "iconUrl": "https://raw.githubusercontent.com/aws/aws-cdk/master/logo/default-256-dark.png"
       },
       "java": {
-        "package": "software.amazon.awscdk.services.apigatewayv2",
+        "package": "software.amazon.awscdk.services.apigatewayv2.integrations",
         "maven": {
           "groupId": "software.amazon.awscdk",
-          "artifactId": "apigatewayv2"
+          "artifactId": "apigatewayv2-integrations"
         }
       },
       "python": {
-        "distName": "aws-cdk.aws-apigatewayv2",
-        "module": "aws_cdk.aws_apigatewayv2",
+        "distName": "aws-cdk.aws-apigatewayv2-integrations",
+        "module": "aws_cdk.aws_apigatewayv2_integrations",
         "classifiers": [
           "Framework :: AWS CDK",
           "Framework :: AWS CDK :: 1"
@@ -35,7 +35,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/aws-cdk.git",
-    "directory": "packages/@aws-cdk/aws-apigatewayv2"
+    "directory": "packages/@aws-cdk/aws-apigatewayv2-integrations"
   },
   "homepage": "https://github.com/aws/aws-cdk",
   "scripts": {
@@ -47,14 +47,11 @@
     "pkglint": "pkglint -f",
     "test": "cdk-test",
     "watch": "cdk-watch",
-    "cfn2ts": "cfn2ts",
     "compat": "cdk-compat",
     "build+test": "npm run build && npm test",
-    "build+test+package": "npm run build+test && npm run package",
-    "gen": "cfn2ts"
+    "build+test+package": "npm run build+test && npm run package"
   },
   "cdk-build": {
-    "cloudformation": "AWS::ApiGatewayV2",
     "jest": true,
     "env": {
       "AWSLINT_BASE_CONSTRUCT": true
@@ -74,56 +71,33 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@aws-cdk/assert": "0.0.0",
+    "@types/nodeunit": "^0.0.31",
     "cdk-build-tools": "0.0.0",
     "cdk-integ-tools": "0.0.0",
-    "cfn2ts": "0.0.0",
+    "nodeunit": "^0.11.3",
     "pkglint": "0.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "0.0.0",
+    "@aws-cdk/aws-apigatewayv2": "0.0.0",
     "@aws-cdk/aws-ec2": "0.0.0",
-    "@aws-cdk/aws-iam": "0.0.0",
-    "@aws-cdk/aws-lambda": "0.0.0",
-    "@aws-cdk/aws-cloudwatch": "0.0.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "0.0.0",
+    "@aws-cdk/aws-servicediscovery": "0.0.0",
     "@aws-cdk/core": "0.0.0",
-    "constructs": "^3.2.0"
+    "constructs": "^3.0.4"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-apigatewayv2": "0.0.0",
     "@aws-cdk/aws-ec2": "0.0.0",
-    "@aws-cdk/aws-iam": "0.0.0",
-    "@aws-cdk/aws-lambda": "0.0.0",
-    "@aws-cdk/aws-certificatemanager": "0.0.0",
-    "@aws-cdk/aws-cloudwatch": "0.0.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "0.0.0",
+    "@aws-cdk/aws-servicediscovery": "0.0.0",
     "@aws-cdk/core": "0.0.0",
-    "constructs": "^3.2.0"
+    "constructs": "^3.0.4"
   },
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
   },
-  "awslint": {
-    "exclude": [
-      "from-method:@aws-cdk/aws-apigatewayv2.HttpIntegration",
-      "from-method:@aws-cdk/aws-apigatewayv2.HttpRoute",
-      "from-method:@aws-cdk/aws-apigatewayv2.HttpStage",
-      "props-physical-name-type:@aws-cdk/aws-apigatewayv2.HttpStageProps.stageName",
-      "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpApiMappingProps",
-      "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpIntegrationProps",
-      "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpRouteProps",
-      "resource-attribute:@aws-cdk/aws-apigatewayv2.HttpApi.apiEndpoint"
-    ]
-  },
   "stability": "experimental",
   "maturity": "experimental",
-  "features": [
-    {
-      "name": "Higher level constructs for HTTP APIs",
-      "stability": "Experimental"
-    },
-    {
-      "name": "Higher level constructs for Websocket APIs",
-      "stability": "Not Implemented"
-    }
-  ],
   "awscdkio": {
     "announce": false
   }
