feat(apigatewayv2): http api - endpoint url (#11092)
fixes #10651


----

*By submitting this pull request, I confirm that my contribution is made under the terms of the Apache-2.0 license*

--- a/packages/@aws-cdk/aws-apigatewayv2/package.json
+++ b/packages/@aws-cdk/aws-apigatewayv2/package.json
@@ -108,8 +108,7 @@
       "props-physical-name-type:@aws-cdk/aws-apigatewayv2.HttpStageProps.stageName",
       "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpApiMappingProps",
       "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpIntegrationProps",
-      "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpRouteProps",
-      "resource-attribute:@aws-cdk/aws-apigatewayv2.HttpApi.apiEndpoint"
+      "props-physical-name:@aws-cdk/aws-apigatewayv2.HttpRouteProps"
     ]
   },
   "stability": "experimental",
