docs(core): make examples compile
Add support in `cdk-build` to actually run `jsii-rosetta --compile --fail`
in packages that declare supporting "strict" mode for `jsii-rosetta`.
This enables a "quick" feedback loop for detercting "now-invalid" code
examples.

Turned on this feature on `@aws-cdk/core` and made the necessary
adjustements to fixtures and examples so that they now compile.

--- a/packages/@aws-cdk/core/package.json
+++ b/packages/@aws-cdk/core/package.json
@@ -146,6 +146,7 @@
       "cd test/fs",
       "tar -xzf fixtures.tar.gz"
     ],
+    "rosetta": "strict",
     "env": {
       "AWSLINT_BASE_CONSTRUCT": "true"
     }
