--- a/tools/cdk-build-tools/package.json
+++ b/tools/cdk-build-tools/package.json
@@ -52,6 +52,7 @@
     "jest": "^26.6.3",
     "jsii": "^1.14.1",
     "jsii-pacmak": "^1.14.1",
+    "jsii-rosetta": "^1.14.1",
     "nodeunit": "^0.11.3",
     "nyc": "^15.1.0",
     "ts-jest": "^26.4.4",
