feat(lambda-nodejs): esbuild bundling

--- a/packages/@aws-cdk/aws-lambda-nodejs/lib/Dockerfile
+++ b/packages/@aws-cdk/aws-lambda-nodejs/lib/Dockerfile
@@ -6,10 +6,10 @@ FROM $IMAGE
 # Install yarn
 RUN npm install --global yarn@1.22.5
 
-# Install parcel 2 (fix the version since it's still in beta)
-# install at "/" so that node_modules will be in the path for /asset-input
-ARG PARCEL_VERSION=2.0.0-beta.1
-RUN cd / && npm install parcel@$PARCEL_VERSION --no-package-lock
+# Install esbuild
+# (unsafe-perm because esbuild has a postinstall script)
+ARG ESBUILD_VERSION=0
+RUN npm install --global --unsafe-perm=true esbuild@$ESBUILD_VERSION
 
 # Ensure all users can write to npm cache
 RUN mkdir /tmp/npm-cache && \
@@ -22,4 +22,4 @@ RUN npm config --global set update-notifier false
 # create non root user and change allow execute command for non root user
 RUN /sbin/useradd -u 1000 user && chmod 711 /
 
-CMD [ "parcel" ]
+CMD [ "esbuild" ]
