--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
       "packages/@aws-cdk-containers/*",
       "packages/@monocdk-experiment/*",
       "packages/@aws-cdk/*/lambda-packages/*",
-      "tools/*"
+      "tools/*",
+      "scripts/script-tests"
     ],
     "nohoist": [
       "**/jszip",
