Revert "chore: multiple release branches without merge conflicts (#11287)"
This reverts commit 85915a4eff6c2dc40d8989dd8c7b7f52d43a711c.

--- a/lerna.json
+++ b/lerna.json
@@ -8,9 +8,8 @@
     "packages/@aws-cdk-containers/*",
     "packages/@monocdk-experiment/*",
     "packages/@aws-cdk/*/lambda-packages/*",
-    "tools/*",
-    "scripts/script-tests"
+    "tools/*"
   ],
   "rejectCycles": "true",
-  "version": "0.0.0"
+  "version": "1.71.0"
 }
