--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
       "packages/@aws-cdk-containers/*",
       "packages/@monocdk-experiment/*",
       "packages/@aws-cdk/*/lambda-packages/*",
-      "tools/*",
-      "scripts/script-tests"
+      "tools/*"
     ],
     "nohoist": [
       "**/jszip",
