--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,6 +12,9 @@ phases:
       # login to ecr
       - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${AWS_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com
 
+      # test - should fail for now if login worked
+      - docker pull nginx
+
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
   pre_build:
