--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,7 +13,7 @@ phases:
       - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_REGISTRY}
 
       # https://github.com/moby/moby/issues/30880
-      - sed "s|${ECR_REGISTRY}|https://index.docker.io/v1/|g" /root/.docker/config.json
+      - sed -i "s|${ECR_REGISTRY}|https://index.docker.io/v1/|g" /root/.docker/config.json
       - cat /root/.docker/config.json
 
       # debug to make sure we actually pulling from the ecr mirror
