--- a/packages/@aws-cdk/aws-s3/package.json
+++ b/packages/@aws-cdk/aws-s3/package.json
@@ -77,8 +77,7 @@
     "cdk-integ-tools": "0.0.0",
     "cfn2ts": "0.0.0",
     "pkglint": "0.0.0",
-    "nodeunit-shim": "0.0.0",
-    "sinon": "^9.2.1"
+    "nodeunit-shim": "0.0.0"
   },
   "dependencies": {
     "@aws-cdk/aws-events": "0.0.0",
