--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,10 +14,6 @@ phases:
 
       # https://github.com/moby/moby/issues/30880
       - sed -i "s|${ECR_REGISTRY}|https://index.docker.io/v1/|g" /root/.docker/config.json
-      - cat /root/.docker/config.json
-
-      # debug to make sure we actually pulling from the ecr mirror
-      - docker pull cdk-testing-image:1.0
 
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
@@ -28,7 +24,7 @@ phases:
     commands:
       - 'if ${BUMP_CANDIDATE:-false}; then /bin/bash ./scripts/bump-candidate.sh; fi'
       - /bin/bash ./scripts/align-version.sh
-      # - /bin/bash ./build.sh
+      - /bin/bash ./build.sh
   post_build:
     commands:
       - "[ -f .BUILD_COMPLETED ] && /bin/bash ./pack.sh"
