--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,7 +7,7 @@ phases:
     commands:
 
       # setup the ecr mirror proxy
-      - ./scripts/ecr-proxy/start.sh 5000
+      # - ./scripts/ecr-proxy/start.sh 5000
 
       # Start docker daemon inside the container and point use the local mirror proxy
       - nohup /usr/bin/dockerd --registry-mirror http://localhost:5000 --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
