--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,17 +7,11 @@ phases:
     commands:
 
       # setup the ecr mirror proxy
-      # - ./scripts/ecr-proxy/start.sh 5000
+      - ./scripts/ecr-proxy/start.sh 5000
 
       # Start docker daemon inside the container and point use the local mirror proxy
       - nohup /usr/bin/dockerd --registry-mirror http://localhost:5000 --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
-
-      # debug - should not work if the mirror doesn't work
-      - docker pull cdk-testing-image:1.0
-
-      # # https://github.com/moby/moby/issues/30880
-      # - sed -i "s|${ECR_REGISTRY}|https://index.docker.io/v1/|g" /root/.docker/config.json
 
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
@@ -28,7 +22,7 @@ phases:
     commands:
       - 'if ${BUMP_CANDIDATE:-false}; then /bin/bash ./scripts/bump-candidate.sh; fi'
       - /bin/bash ./scripts/align-version.sh
-      # - /bin/bash ./build.sh
+      - /bin/bash ./build.sh
   post_build:
     commands:
       - "[ -f .BUILD_COMPLETED ] && /bin/bash ./pack.sh"
