--- a/buildspec-pr.yaml
+++ b/buildspec-pr.yaml
@@ -5,8 +5,12 @@ version: 0.2
 phases:
   install:
     commands:
-      # Start docker daemon inside the container
-      - nohup /usr/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
+
+      # setup the ecr mirror proxy
+      - ./scripts/ecr-proxy/start.sh ${ECR_REGISTRY} 5000
+
+      # Start docker daemon inside the container and use the local proxy as a registry mirror
+      - nohup /usr/bin/dockerd --registry-mirror http://localhost:5000 --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
 
       # Install yarn if it wasn't already present in the image
