feat(cognito): user pools - non-ascii email domains (#11099)
If an email address for cognito email settings contains a non-ascii character, the cognito cdk package applies punycode encoding, which cloudformation will pick up properly.

This pull request adds the [`punycode`](https://github.com/bestiejs/punycode.js) package to the dependencies, as previously discussed in #8473. The package occupies 42KB in `node_modules` after installation. I am not sure if I configured the package correctly to be included in the cdk build. The project itself added `punycode` to `aws-cdk-lib` and `monocdk`, I had to re-run `yarn install` in these packages.

Unit- and integration tests are added, but notice that I could not manage a manual e2e test, I think I need to own a domain with non-ascii letters to do so, which I currently do not.

A similar approach as in this PR will also be interesting for other cdk packages which deal with email addresses and domains, like hosted zones.

According to the [Cfn Domain Name Format Docs](https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/DomainNameFormat.html), characters with code point below 33, or in `[127, 255]` should be escaped with an octal code, which is not applied in this pull request.

Fixes #8473

----

*By submitting this pull request, I confirm that my contribution is made under the terms of the Apache-2.0 license*

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
       "**/jszip/**",
       "@aws-cdk/aws-codepipeline-actions/case",
       "@aws-cdk/aws-codepipeline-actions/case/**",
+      "@aws-cdk/aws-cognito/punycode",
+      "@aws-cdk/aws-cognito/punycode/**",
       "@aws-cdk/aws-ecr-assets/minimatch",
       "@aws-cdk/aws-ecr-assets/minimatch/**",
       "@aws-cdk/aws-eks/yaml",
@@ -79,6 +81,8 @@
       "aws-cdk-lib/jsonschema/**",
       "aws-cdk-lib/minimatch",
       "aws-cdk-lib/minimatch/**",
+      "aws-cdk-lib/punycode",
+      "aws-cdk-lib/punycode/**",
       "aws-cdk-lib/semver",
       "aws-cdk-lib/semver/**",
       "aws-cdk-lib/yaml",
@@ -91,6 +95,8 @@
       "monocdk/jsonschema/**",
       "monocdk/minimatch",
       "monocdk/minimatch/**",
+      "monocdk/punycode",
+      "monocdk/punycode/**",
       "monocdk/semver",
       "monocdk/semver/**",
       "monocdk/yaml",
