chore(ubergen): switch to ubergen.exclude as a filter instead of private
Currently, ubergen excludes packages that are marked as 'private'.
In v2, all packages under `@aws-cdk/` will be marked as 'private'.
This will mean that 'monocdk' and 'aws-cdk-lib' modules will have no
packages included.

Introduce another field `ubergen.exclude` in `package.json` that will be
explicitly exclude packages from the monolithic modules.

--- a/tools/yarn-cling/package.json
+++ b/tools/yarn-cling/package.json
@@ -55,5 +55,8 @@
   "homepage": "https://github.com/aws/aws-cdk",
   "engines": {
     "node": ">= 10.13.0 <13 || >=13.7.0"
+  },
+  "ubergen": {
+    "exclude": true
   }
 }
