Create addListener() and addBackend() method to accept a single listener and backend service respectively

--- a/packages/@aws-cdk/aws-appmesh/package.json
+++ b/packages/@aws-cdk/aws-appmesh/package.json
@@ -174,14 +174,10 @@
       "docs-public-apis:@aws-cdk/aws-appmesh.Protocol.HTTP",
       "docs-public-apis:@aws-cdk/aws-appmesh.Protocol.HTTP2",
       "docs-public-apis:@aws-cdk/aws-appmesh.Protocol.GRPC",
-      "duration-prop-type:@aws-cdk/aws-appmesh.GrpcNodeListener.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.GrpcNodeListenerOptions.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.HttpNodeListener.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.HttpNodeListenerOptions.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.Http2NodeListener.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.Http2NodeListenerOptions.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.TcpNodeListener.timeout",
-      "duration-prop-type:@aws-cdk/aws-appmesh.TcpNodeListenerOptions.timeout"
+      "duration-prop-type:@aws-cdk/aws-appmesh.GrpcVirtualNodeListenerOptions.timeout",
+      "duration-prop-type:@aws-cdk/aws-appmesh.HttpVirtualNodeListenerOptions.timeout",
+      "duration-prop-type:@aws-cdk/aws-appmesh.Http2VirtualNodeListenerOptions.timeout",
+      "duration-prop-type:@aws-cdk/aws-appmesh.TcpVirtualNodeListenerOptions.timeout"
     ]
   },
   "stability": "experimental",
