--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,8 +6,15 @@ phases:
   install:
     commands:
 
-      # available in our custom CodeBuild image
+      # baked in our image.
+      # tried starting this on image boot but CodeBuild entrypoint shananigens got the best of me.
+      # https://github.com/aws/aws-codebuild-docker-images/issues/157#issuecomment-457424620
       - /root/ecr-proxy/start.sh
+
+      # debug - should fail because dockerhub is disabled
+      - echo "127.0.0.1       registry-1.docker.io" >> /etc/hosts
+      - cat /etc/hosts
+      - docker pull nginx
 
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
@@ -18,7 +25,7 @@ phases:
     commands:
       - 'if ${BUMP_CANDIDATE:-false}; then /bin/bash ./scripts/bump-candidate.sh; fi'
       - /bin/bash ./scripts/align-version.sh
-      - /bin/bash ./build.sh
+      # - /bin/bash ./build.sh
   post_build:
     commands:
       - "[ -f .BUILD_COMPLETED ] && /bin/bash ./pack.sh"
