--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,6 @@ phases:
       # debug - disable dockerhub
       - echo "127.0.0.1       registry-1.docker.io" >> /etc/hosts
       - cat /etc/hosts
-      - docker pull alpine
 
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
@@ -25,7 +24,7 @@ phases:
     commands:
       - 'if ${BUMP_CANDIDATE:-false}; then /bin/bash ./scripts/bump-candidate.sh; fi'
       - /bin/bash ./scripts/align-version.sh
-      # - /bin/bash ./build.sh
+      - /bin/bash ./build.sh
   post_build:
     commands:
       - "[ -f .BUILD_COMPLETED ] && /bin/bash ./pack.sh"
