--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,9 +11,8 @@ phases:
       # https://github.com/aws/aws-codebuild-docker-images/issues/157#issuecomment-457424620
       - /root/ecr-proxy/start.sh
 
-      # debug - disable dockerhub
-      - echo "127.0.0.1       registry-1.docker.io" >> /etc/hosts
-      - cat /etc/hosts
+      # debug
+      - docker pull nginx
 
       # Install yarn if it wasn't already present in the image
       - yarn --version || npm -g install yarn
