--- a/package.json
+++ b/package.json
@@ -65,18 +65,26 @@
       "@aws-cdk/cloud-assembly-schema/jsonschema/**",
       "@aws-cdk/cloud-assembly-schema/semver",
       "@aws-cdk/cloud-assembly-schema/semver/**",
+      "@aws-cdk/core/@balena/dockerignore",
+      "@aws-cdk/core/@balena/dockerignore/**",
       "@aws-cdk/core/fs-extra",
       "@aws-cdk/core/fs-extra/**",
+      "@aws-cdk/core/ignore",
+      "@aws-cdk/core/ignore/**",
       "@aws-cdk/core/minimatch",
       "@aws-cdk/core/minimatch/**",
       "@aws-cdk/cx-api/semver",
       "@aws-cdk/cx-api/semver/**",
       "@aws-cdk/yaml-cfn/yaml",
       "@aws-cdk/yaml-cfn/yaml/**",
+      "aws-cdk-lib/@balena/dockerignore",
+      "aws-cdk-lib/@balena/dockerignore/**",
       "aws-cdk-lib/case",
       "aws-cdk-lib/case/**",
       "aws-cdk-lib/fs-extra",
       "aws-cdk-lib/fs-extra/**",
+      "aws-cdk-lib/ignore",
+      "aws-cdk-lib/ignore/**",
       "aws-cdk-lib/jsonschema",
       "aws-cdk-lib/jsonschema/**",
       "aws-cdk-lib/minimatch",
@@ -87,10 +95,14 @@
       "aws-cdk-lib/semver/**",
       "aws-cdk-lib/yaml",
       "aws-cdk-lib/yaml/**",
+      "monocdk/@balena/dockerignore",
+      "monocdk/@balena/dockerignore/**",
       "monocdk/case",
       "monocdk/case/**",
       "monocdk/fs-extra",
       "monocdk/fs-extra/**",
+      "monocdk/ignore",
+      "monocdk/ignore/**",
       "monocdk/jsonschema",
       "monocdk/jsonschema/**",
       "monocdk/minimatch",
